# WgLestaAPI

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-publish.yml
LestaGamesAPI/: Application.py  Constants.py  WOTB.py  __init__.py
WgLestaAPI/: Application.py  Authentication.py  Constants.py  Exceptions.py  Utils.py  __init__.py  aio.py  aioApp.py
docs/en/: README.md
docs/ru/: README.md
