[tool.poetry]
name = "WgLestaAPI"
version = "0.3.0"
description = "Unofficial Python library that implements the Wargaming.net API and Lesta Games API functionality"
authors = ["Alexander Podstrechnyy <tankalxat34@gmail.com>"]
repository = "https://github.com/tankalxat34/WgLestaAPI"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
